refactor: quiz 패키지의 Game 을 Quiz 로 리네임한다 (B안)
Game 인터페이스가 quiz/ 에 있는데 이름은 Game 이라 읽는 사람이 세션 쪽
GameSession, GameService 와 헷갈렸다.

Game→Quiz, AbstractQuizGame→AbstractQuiz, SongGame→SongQuiz,
ComputerScienceQuizGame→CsQuiz, ComputerScienceQuiz→CsQuestion.
표에 없던 주변 이름도 함께 맞춘다. HangmanGame→HangmanQuiz, 팩토리와
CreateInfo, GameAnswer/GameContent/GameInfo 까지.

이름만 바꾸는 커밋이라 동작 변경은 없다.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>